File Share, Folder Share (RO/RW), Spring 4, Jetty 12, Java 21/25, Security