@@ -1,6 +1,7 @@
 package org.aalku.joatse.cloud.service.sharing.http;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.util.Objects;
 import java.util.Optional;
@@ -18,8 +19,17 @@ public class ListenAddress {
 	
 	public URL getListenUrl(Optional<String> file) {
 		try {
-			return new URL(getCloudProtocol(), getCloudHostname(), getListenPort(), file.orElse(""));
-		} catch (MalformedURLException e) {
+			// The multi-argument URI constructor encodes the path component automatically,
+			// so we must NOT pre-encode the path. We only need to normalize slashes.
+			String path = file
+				.map(f -> {
+					String normalized = f.startsWith("/") ? f : "/" + f;
+					return normalized;
+				})
+				.orElse("");
+			// The URI constructor will properly encode spaces, %, #, ?, etc. in the path
+			return new URI(getCloudProtocol(), null, getCloudHostname(), getListenPort(), path, null, null).toURL();
+		} catch (MalformedURLException | java.net.URISyntaxException e) {
 			throw new RuntimeException(e.toString(), e);
 		}
 	}
